# CS162-Course-Registration-System

./: .gitignore  CMakeLists.txt  README.md  RULES.md  main.cpp
API/AddStudentToCourse/: AddStudentToCourse.h
API/ChangeCurrentSemester/: ChangeCurrentSemester.h
API/DateFunction/: DateFunction.cpp
API/DeleteCourse/: DeleteCourse.cpp
API/ExportStudentsInCourse/: ExportStudentsInCourse.h
API/GetAll/: GetAll.h
API/OpenFile/: OpenFile.cpp
API/RemoveStudentFromCourse/: RemoveStudentFromCourse.cpp  RemoveStudentFromCourse.h
API/ShowCSVErrorLines/: ShowCSVErrorLines.cpp  ShowCSVErrorLines.h
API/ValidateCourse/: ValidateCourse.cpp
Data/: Class.txt  Course.txt  CurrentSemester.txt  SchoolYear.txt  Score.txt  Semester.txt  Student.txt  StudentCourse.txt  Student_Course.txt  Student_Course_Class.txt  User.txt
ExportCSV/: StudentInCourse.csv
Function/: Function.cpp  Function.h  MainFunction.cpp  MainFunction.h
Function/AddStudentToClass/: AddStudentToClass.cpp  AddStudentToClass.h
Function/AddStudentToCourse/: AddStudentToCourse.cpp  AddStudentToCourse.h
Function/ChangeCurrentSemester/: ChangeCurrentSemester.cpp
Function/ChangePassword/: ChangePassword.cpp  ChangePassword.h
GUI/: GlobalStyle.h  MainGUI.cpp  MainGUI.h  MainWindow.cpp  MainWindow.h
GlobalVar/: GlobalVar.cpp  GlobalVar.h
Struct/: Class.h  Course.h  Data.h  LinkedList.h  SchoolYear.h  Score.h  Semester.h  Student.h  StudentCourse.h  Student_Course.h  Student_Course_Class.h  User.h
TemplateCSV/: Scoreboard.csv  StudentInClass.csv  StudentsInCourse.csv  Students_in_course.csv
(+391 files in other folders)
